# Aurora_ws

./: .gitignore  frames_2026-03-24_17.37.03.gv  record_mapping_data.sh
.gsd/: REQUIREMENTS.md  RESEARCH.md  ROADMAP.md  SPEC.md  STATE.md
.gsd/phases/1/: 1-PLAN.md  1-SUMMARY.md  2-PLAN.md  2-SUMMARY.md  3-PLAN.md  3-SUMMARY.md  VERIFICATION.md
.gsd/phases/2/: 1-PLAN.md  1-SUMMARY.md  2-PLAN.md  3-PLAN.md  RESEARCH.md  VERIFICATION.md
.gsd/phases/3/: 1-PLAN.md  1-SUMMARY.md  2-PLAN.md  2-SUMMARY.md  3-PLAN.md  4-PLAN.md  RESEARCH.md  VERIFICATION.md
.gsd/phases/4/: 4-PLAN.md  4-SUMMARY.md  4.1-PLAN.md  4.2-PLAN.md  4.2-SUMMARY.md  RESEARCH.md  VERIFICATION.md
.gsd/phases/5/: PLAN.md  RESEARCH.md
.gsd/phases/8/: 1-PLAN.md  2-PLAN.md  3-PLAN.md
ros2_ws/scratch/: check_struct  check_struct.cpp
ros2_ws/src/aurora_ai_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/aurora_ai_bridge/aurora_ai_bridge/: ai_bridge_node.py  custom_teleop.py  reasoning.py  status_monitor.py  text_commander.py  tui_node.py  whisper_node.py
ros2_ws/src/aurora_ai_bridge/aurora_ai_bridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ros2_ws/src/aurora_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/aurora_bringup/behavior_trees/: aurora_nav_bt.xml  aurora_nav_through_poses_bt.xml
ros2_ws/src/aurora_bringup/config/: ekf.yaml  intelligence.yaml  nav2_params.yaml  rtabmap.yaml  rtabmap_localization.yaml  rtabmap_mapping.yaml  slam_toolbox_async.yaml  twist_mux.yaml
ros2_ws/src/aurora_bringup/launch/: aurora.launch.py  aurora_all.launch.py  camera.launch.py  camera_v2.launch.py  foundation.launch.py  intelligence.launch.py  laptop.launch.py  laptop_ai.launch.py  mapping.launch.py  mapping_only.launch.py  navigate.launch.py  navigation.launch.py  perception.launch.py  rviz.launch.py  slam.launch.py
ros2_ws/src/aurora_bringup/rviz/: aurora.rviz
ros2_ws/src/aurora_bringup/scripts/: map_saver_node.py
ros2_ws/src/aurora_camera/: package.xml  setup.cfg  setup.py
ros2_ws/src/aurora_camera/aurora_camera/: camera_node.py
ros2_ws/src/aurora_camera/launch/: camera.launch.py
ros2_ws/src/aurora_imu/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/aurora_imu/aurora_imu/: bno055_bare.py  imu_node.py
ros2_ws/src/aurora_imu/src/: bno055_bare.cpp
ros2_ws/src/aurora_imu_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/aurora_lidar/: package.xml  setup.cfg  setup.py
ros2_ws/src/aurora_lidar/aurora_lidar/: failsafe_stop.py  lidar_subscriber.py  obstacle_avoidance_node.py
ros2_ws/src/aurora_motor_driver/: package.xml  setup.cfg  setup.py
ros2_ws/src/aurora_motor_driver/aurora_motor_driver/: motor_node.py
ros2_ws/src/aurora_motor_driver/aurora_motor_driver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ros2_ws/src/aurora_motor_driver/aurora_motor_driver/STservo_sdk/: protocol_packet_handler.py
ros2_ws/src/aurora_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/aurora_msgs/srv/: ListObjects.srv  QueryObject.srv
ros2_ws/src/aurora_odometry/: CMakeLists.txt  package.xml
ros2_ws/src/aurora_odometry/src/: ekf_odom_node.cpp
ros2_ws/src/aurora_semantic_memory/: package.xml  setup.cfg  setup.py
ros2_ws/src/aurora_semantic_memory/aurora_semantic_memory/: semantic_memory_node.py
ros2_ws/src/aurora_teleop/: package.xml  setup.cfg  setup.py
ros2_ws/src/aurora_teleop/aurora_teleop/: teleop_node.py
ros2_ws/src/aurora_ultrasonic/: package.xml  setup.cfg  setup.py
ros2_ws/src/aurora_ultrasonic/aurora_ultrasonic/: ultra_node.py
ros2_ws/src/camera_teaching/: CMakeLists.txt  CODE_EXPLAINED.md  package.xml
ros2_ws/src/camera_teaching/camera_teaching/: teaching_node.py
ros2_ws/src/camera_teaching/launch/: teaching.launch.py
ros2_ws/src/test_pkg/: package.xml  setup.py
scripts/: em.py  ftconf.py  ftdi_urls.py  i2cscan.py  laptop_setup.sh  pyterm.py  setup_network.sh
