<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aurora_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="aurora@gsd.auto">aurora</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>aurora_msgs</depend>
  <depend>aurora_motor_driver</depend>
  <depend>aurora_odometry</depend>
  <depend>sllidar_ros2</depend>
  <depend>aurora_imu_cpp</depend>
  <exec_depend>depthai_ros_driver</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
